--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,15 @@ allprojects {
     }
 }
 
+ext {
+    compileSdkVersion = 27
+
+    minSdkVersion = 19
+    targetSdkVersion = 27
+
+    supportLibVersion = "27.1.1"
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
