--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,86 +1,101 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    defaultConfig {
-        applicationId "com.tachcash"
-        minSdkVersion 19
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+  compileSdkVersion rootProject.ext.compileSdkVersion
+  defaultConfig {
+    applicationId "com.tachcash"
+    minSdkVersion rootProject.ext.minSdkVersion
+    targetSdkVersion rootProject.ext.targetSdkVersion
+    versionCode 2
+    versionName "1.0"
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    vectorDrawables.useSupportLibrary = true
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+  }
   compileOptions {
     targetCompatibility 1.8
     sourceCompatibility 1.8
   }
+
+  //for custom resource folder
+  sourceSets {
+    main {
+      res.srcDirs = ['src/main/res']
+      file('src/main/res-screen')
+          .listFiles()
+          .each { res.srcDirs += it.path }
+    }
+  }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+  implementation "com.android.support:support-v4:${rootProject.ext.supportLibVersion}"
+  implementation "com.android.support:recyclerview-v7:${rootProject.ext.supportLibVersion}"
+  implementation "com.android.support:support-v13:${rootProject.ext.supportLibVersion}"
+  implementation "com.android.support:cardview-v7:${rootProject.ext.supportLibVersion}"
+  implementation "com.android.support:design:${rootProject.ext.supportLibVersion}"
+  implementation "com.android.support.constraint:constraint-layout:1.1.0-beta6"
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation 'com.android.support.test:runner:1.0.1'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
 
-    //Butterknife
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+  //Butterknife
+  implementation 'com.jakewharton:butterknife:8.8.1'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    //Retrofit2
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+  //Retrofit2
+  implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+  implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+  implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
+  implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
-    //RxJava, RxAndroid
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+  //RxJava, RxAndroid
+  implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+  implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
 
-    //Dagger2
-    implementation 'com.google.dagger:dagger:2.15'
-    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
-    annotationProcessor "com.google.dagger:dagger-compiler:2.15"
+  //Dagger2
+  implementation 'com.google.dagger:dagger:2.15'
+  compileOnly 'org.glassfish:javax.annotation:10.0-b28'
+  annotationProcessor "com.google.dagger:dagger-compiler:2.15"
 
-    //Moxy
-    implementation 'com.arello-mobile:moxy:1.5.3'
-    implementation 'com.arello-mobile:moxy-app-compat:1.5.3'
-    implementation 'com.arello-mobile:moxy-android:1.5.3'
-    annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.3'
+  //Moxy
+  implementation 'com.arello-mobile:moxy:1.5.3'
+  implementation 'com.arello-mobile:moxy-app-compat:1.5.3'
+  implementation 'com.arello-mobile:moxy-android:1.5.3'
+  annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.3'
 
-    //Timber
-    implementation 'com.jakewharton.timber:timber:4.6.1'
+  //Timber
+  implementation 'com.jakewharton.timber:timber:4.6.1'
 
-    //Glide
-    implementation 'com.github.bumptech.glide:glide:4.5.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+  //Glide
+  implementation 'com.github.bumptech.glide:glide:4.5.0'
+  annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
-    //Alerter
-    implementation 'com.tapadoo.android:alerter:2.0.4'
+  //Alerter
+  implementation 'com.tapadoo.android:alerter:2.0.4'
 
-    //Loading button
-    implementation 'br.com.simplepass:loading-button-android:1.12.1'
+  //Loading button
+  implementation 'br.com.simplepass:loading-button-android:1.12.1'
 
-    //MaskedEditText
-    implementation 'ru.egslava:MaskedEditText:1.0.5'
+  //MaskedEditText
+  implementation 'ru.egslava:MaskedEditText:1.0.5'
 
-    //Collapsed layout
-    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+  //Collapsed layout
+  implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
 
-    //Alert dialog
-    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+  //Alert dialog
+  implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
 
-    //bar code
-    implementation 'com.google.zxing:core:3.3.2'
-    implementation 'com.journeyapps:zxing-android-embedded:3.6.0@aar'
+  //bar code
+  implementation 'com.google.zxing:core:3.3.2'
+  implementation 'com.journeyapps:zxing-android-embedded:3.6.0@aar'
 }
