--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,14 @@
       android:name=".App"
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
+      android:hardwareAccelerated="false"
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".feature.activities.MainActivity">
+    <activity
+        android:name=".feature.activities.MainActivity"
+        android:windowSoftInputMode="adjustPan">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
