--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tachcash">
 
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
   <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="com.truiton.mapfragment.permission.MAPS_RECEIVE"/>
+
   <application
       android:name=".App"
       android:allowBackup="true"
-      android:icon="@mipmap/ic_launcher"
       android:hardwareAccelerated="false"
+      android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
@@ -22,6 +25,10 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyA6ex1nGCGeYObNP9_gja4QE1EWRGXDCFg"/>
   </application>
 
 </manifest>
